<resources>
    <string name="app_name">WorkSpace</string>
    <string name="appNameLabel">WorkSpace</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userSignInLabelText">Start searching for jobs</string>
    <string name="companySignInLabelText">Start searching for employees</string>
    <string name="userEmailAddressHint">Enter Email Address</string>
    <string name="userPasswordHint">Enter Password</string>
    <string name="submitButtonLabel">Get Started</string>
    <string name="filtersStr">Filters</string>
    <string name="likedStr">Matched Companies</string>
    <string name="answerFieldHintStr">Enter in your response</string>
    <string name="submitAnswerStr">Save</string>
    <string name="nextQuestionStr">Next</string>
    <string name="companyInfoLabel">Business Information</string>
    <string name="experienceLabelStr">Desired Experience</string>
    <string name="videoLabelStr">Uploaded Videos</string>
    <string name="minimumAgeLabelStr">Minimum working age:</string>
    <string name="locationLabelStr">Company Location:</string>
    <string name="companyPageLabelStr">Company Information</string>
    <string name="companyNameLabelStr">Company Name:</string>
    <string name="enterCompanyNameHintStr">Enter the company name</string>
    <string name="companyURLLabelStr">Advertisement URL: </string>
    <string name="enterCompanyURLHintStr">Enter valid YouTube URL</string>
    <string name="companyEmailLabelStr">Company Email:</string>
    <string name="enterCompanyEmailHint">Enter in your email address</string>
    <string name="Question3">Minimum age requirement:</string>
    <string name="mimAgeLabelHint">Enter age</string>
    <string name="Question4">Company Location:</string>
    <string name="enterCompanyAddressHint">Enter street</string>
    <string name="enterCompanyCityHint">Enter city</string>
    <string name="enterCompanyStateHint">Enter state</string>
    <string name="enterCompanyZipCodeHint">Enter zip code</string>
    <string name="Question7">What is the experience requirements you have for employees?</string>
    <string name="Question8">What field of occupation does your company fall in?</string>
    <string name="Question9">What certifications are employees required to obtain?</string>
    <string name="companyCertHint">Enter required certifications</string>
    <string name="welcomeString">"Start your search below. "</string>
    <string name="companyEmailHintStr">Enter an email.</string>
    <string name="companyPasswordHintStr">Enter your password (min. 6 characters)</string>
    <string name="companyConfirmHintStr">Confirm your password (min. 6 characters)</string>
    <string name="registerStr">Sign up now</string>
    <string name="alreadyUserStr">Already a user? Sign in here.</string>
    <string name="loginStr">Sign into your company account below.</string>
    <string name="signInNowStr">Sign in</string>
    <string name="newUserStr">Are you new here? Sign up here.</string>
    <string name="experienceReqLabel">Required Experience:</string>
    <string name="certificationsLabel">Required Certification:</string>
    <string name="youTubeLabel">Your Advertisements:</string>
    <string name="urlStr">Enter in your YouTube URL</string>
    <string name="loc_sentient">Location</string>
    <string name="industry_sentient">Industry</string>
    <string name="reqs_sentient">Your Requirements</string>
    <string name="reqs_sentient">Age and Experience\nRequirements</string>
    <string name="youtubePlaylist">YouTube Playlist URL</string>
    <string name="company_companyprofile">Company Name</string>
    <string name="location_companyprofile">Location</string>
    <string name="industry_companyprofile">Industry</string>
    <string name="requirements_companyprofile">Requirements</string>
    <string name="youtube_companyprofile">URL</string>
    <string name="edit_compprof">Edit</string>
    <string name="certificationHint">Enter certification title:</string>
    <string name="userNameHint">Enter Name:</string>
    <string name="userSurveyTitle">User Information</string>
    <string name="streetAddressHint">Enter Street:</string>
    <string name="interestQuestion">What types of jobs are you interested in?</string>
    <string name="certQuestion">List any certifications you have:</string>
    <string name="zipCodeHint">ZIP Code:</string>
    <string name="experienceQuestion">How experienced are you?</string>
    <string name="addressQuestion">Address:</string>
    <string name="townHint">Enter Town:</string>
    <string name="todo" />
    <string name="stateInputHint">State:</string>
    <string name="ageHint">Enter Age:</string>
    <string name="userSurveySubButton">Save</string>
    <string name="nameText">Name:</string>
    <string name="ageText">Age:</string>
    <string name="experienceReqLabel">Required Experience:</string>
    <string name="certificationsLabel">Required Certification:</string>
    <string name="youTubeLabel">Your Advertisements:</string>



    <string name="filtersLabel">Filters</string>
    <string name="matchButtonLabel">Match</string>
    <string name="watchVideoButtonStr">Learn more about your matches</string>
    <string name="fieldOfInterestLabel">Field of interest</string>
    <string name="priorExperienceStr">Prior experience:</string>
    <string name="certLabel">Certifications:</string>








    <string-array name="experienceLevels">
        <item>No prior experience.</item>
        <item>Have held a non-paying/internship job</item>
        <item>Have held a paying job</item>
        <item>Have experience within the industry holding a paying job</item>
    </string-array>

    <string-array name="occupationTypes">
        <item>Retail/Sales</item>
        <item>Food services</item>
        <item>Hospitality industries</item>
        <item>Janitorial services</item>
        <item>Public health/Medical</item>
    </string-array>


    <string-array name="userInterestDropdownChoices">
        <item>None</item>
        <item>Food Service</item>
        <item>Hospitality</item>
        <item>Retail/Sales</item>
        <item>Public Health/Medical</item>
        <item>Other</item>
    </string-array>
    <string-array name="userExperienceDropdownChoices">
        <item>None</item>
        <item>No prior experience</item>
        <item>Have held a non-paying internship/job</item>
        <item>Have held a paying job</item>
        <item>Have held a paying job within the target industry</item>
    </string-array>
    <string-array name="userSkillsInteraction">
        <item>None</item>
        <item>Leader</item>
        <item>Listener</item>
    </string-array>
    <string-array name="userSkillsInto">
        <item>None</item>
        <item>Hands-On</item>
        <item>Hands-Off</item>
    </string-array>
    <string-array name="userSkillsFocus">
        <item>None</item>
        <item>Analytical</item>
        <item>Problem-Solver</item>
    </string-array>
</resources>