<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutCompSurv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    tools:context=".userSurvey">

    <TextView
        android:id="@+id/userSurveyLabel"
        android:layout_width="314dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik"
        android:text="@string/userSurveyTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/interestSpinner"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:entries="@array/userInterestDropdownChoices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/q2Text"
        app:layout_constraintTop_toBottomOf="@+id/userLocationInput"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/skill1spinner"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:entries="@array/userExperienceDropdownChoices"
        app:layout_constraintStart_toEndOf="@+id/q3Text"
        app:layout_constraintTop_toBottomOf="@+id/interestSpinner" />

    <EditText
        android:id="@+id/userLocationInput"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/townHint"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/userStreetAddressInput"
        app:layout_constraintTop_toBottomOf="@+id/q1Text"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/qAgeText"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/rubik"
        android:text="@string/ageText"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/userAgeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qNameText" />

    <TextView
        android:id="@+id/qNameText"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/rubik"
        android:text="@string/nameText"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userAgeInput"
        android:layout_width="438dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/ageHint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/qAgeText"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="15dp"
        android:text="@string/userSurveySubButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/q2Text"
        android:layout_width="323dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/rubik"
        android:text="@string/interestQuestion"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStreetAddressInput" />

    <TextView
        android:id="@+id/q3Text"
        android:layout_width="326dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik"
        android:text="@string/experienceQuestion"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2Text" />

    <TextView
        android:id="@+id/q2Text2"
        android:layout_width="326dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik"
        android:text="@string/certQuestion"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q3Text" />

    <TextView
        android:id="@+id/q1Text"
        android:layout_width="116dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik"
        android:text="@string/addressQuestion"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAgeInput" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="439dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/qNameText"
        app:layout_constraintTop_toBottomOf="@+id/userSurveyLabel"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/miniLogo"
        android:layout_width="121dp"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minilogo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/userStreetAddressInput"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/streetAddressHint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/userLocationInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q1Text"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/userStateInput"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/stateInputHint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/userLocationInput"
        app:layout_constraintTop_toBottomOf="@+id/q1Text"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/userZipInput"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:freezesText="true"
        android:hint="@string/zipCodeHint"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/userStateInput"
        app:layout_constraintTop_toBottomOf="@+id/q1Text"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cert1Input"
        android:layout_width="464dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/certificationHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2Text2"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cert2Input"
        android:layout_width="464dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/certificationHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cert1Input"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>