<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyRegistration">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="442dp"
        android:layout_height="123dp"
        android:layout_marginTop="155dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/welcomeString"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyPassword"
        android:layout_width="458dp"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/companyPasswordHintStr"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyEmail" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="470dp"
        android:layout_height="61dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/registerStr"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyConfirmPassword" />

    <EditText
        android:id="@+id/companyEmail"
        android:layout_width="455dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/enterCompanyEmailHint"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <EditText
        android:id="@+id/companyConfirmPassword"
        android:layout_width="458dp"
        android:layout_height="68dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/companyConfirmHintStr"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyPassword" />

    <TextView
        android:id="@+id/alreadyUser"
        android:layout_width="242dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/alreadyUserStr"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>