<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyLogin">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="554dp"
        android:layout_height="132dp"
        android:layout_marginTop="155dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/loginStr"
        android:textColor="@color/RoyalBlue"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyEmail"
        android:layout_width="455dp"
        android:layout_height="68dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/enterCompanyEmailHint"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText" />

    <EditText
        android:id="@+id/companyPassword"
        android:layout_width="458dp"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/companyPasswordHintStr"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="470dp"
        android:layout_height="61dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/Blue"
        android:background="@drawable/company_button"
        android:onClick="signIn"
        android:text="@string/signInNowStr"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyPassword" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="396dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:onClick="performCompanyRegistration"
        android:text="@string/newUserStr"
        android:textColor="@color/DarkBlue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>